--- a/package.json
+++ b/package.json
@@ -1,39 +1,32 @@
 {
-  "name": "gamedev_js_jam_2020",
+  "name": "dungeon_roller",
   "version": "1.0.0",
-  "description": "Gamedev.js Jam 2020",
-  "private": true,
-  "dependencies": {},
+  "description": "Dungeon Roller",
+  "private": false,
+  "main": "src/index.js",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "babel-cli": "^6.26.0",
-    "babel-loader": "^8.0.5",
-    "clean-webpack-plugin": "^3.0.0",
-    "compression-webpack-plugin": "^3.1.0",
-    "copy-webpack-plugin": "^5.1.1",
-    "file-loader": "^6.0.0",
-    "gh-pages": "^2.2.0",
-    "html-webpack-inline-source-plugin": "0.0.10",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.28.3",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "@babel/preset-env": "^7.18.6",
+    "babel-loader": "^8.2.5",
+    "copy-webpack-plugin": "^11.0.0",
+    "html-webpack-inline-source-plugin": "1.0.0-beta.2",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   },
   "scripts": {
-    "start": "NODE_ENV='development' webpack-dev-server --progress",
+    "start": "SET NODE_ENV='development' && webpack-dev-server --progress",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "npm run build && gh-pages -d dist",
-    "build": "NODE_ENV='production' webpack -p"
+    "build": "SET NODE_ENV='production' && webpack"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com:mccordgh/gamedev_js_2020.git"
   },
-  "author": "Matthew McCord & Keith Davis & TheCodingGeek",
+  "author": "Matthew McCord",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mccordgh/gamedev_js_2020.git"
+    "url": "https://github.com/mccordgh/dungeon_roller.git"
   },
-  "homepage": "https://github.com/mccordgh/gamedev_js_2020.git#readme"
+  "homepage": "https://github.com/mccordgh/dungeon_roller.git#readme"
 }
