--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "private": false,
   "main": "src/index.js",
   "devDependencies": {
-    "@babel/preset-env": "^7.18.6",
-    "babel-loader": "^8.2.5",
+    "@babel/preset-env": "^7.22.6",
+    "babel-loader": "^8.3.0",
     "copy-webpack-plugin": "^11.0.0",
     "html-webpack-inline-source-plugin": "1.0.0-beta.2",
-    "html-webpack-plugin": "^5.5.0",
-    "webpack": "^5.73.0",
+    "html-webpack-plugin": "^5.5.3",
+    "webpack": "^5.88.1",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3"
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
-    "start": "SET NODE_ENV='development' && webpack-dev-server --progress",
+    "start": "NODE_ENV='development' && npx webpack-dev-server --progress",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "SET NODE_ENV='production' && webpack"
   },
@@ -28,5 +28,8 @@
   "bugs": {
     "url": "https://github.com/mccordgh/dungeon_roller.git"
   },
-  "homepage": "https://github.com/mccordgh/dungeon_roller.git#readme"
+  "homepage": "https://github.com/mccordgh/dungeon_roller.git#readme",
+  "dependencies": {
+    "@babel/core": "^7.22.6"
+  }
 }
